--- a/css/style.css
+++ b/css/style.css
@@ -18,8 +18,13 @@
     -moz-appearance: none;
 }
 
-.clear {
-    clear: both;
+body {
+    line-height: 1.5;
+}
+
+.img-fluid {
+    width: 100%;
+    height: 100%;
 }
 
 .hero-image {
@@ -27,9 +32,18 @@
     height: 100%;
 }
 
+.clear {
+    clear: both;
+}
+
 .padding-top-bottom {
     padding-top: 80px;
     padding-bottom: 80px;
+}
+
+.custom__text {
+    text-align: center;
+    color: rgb(136, 136, 136);
 }
 
 
@@ -55,79 +69,19 @@
     background-color: transparent;
 }
 
-.header .navbar {
-    width: 100%;
-    height: 80px;
-    top: 0;
-    left: 0;
-    /* background-color: #5D5252; */
-    /* box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.175); */
-    z-index: 10;
-    position: fixed;
-}
-
-.header .navbar .logo-container {
-    width: 40%;
-    float: left;
-    height: inherit;
-}
-
-.header .navbar .logo-container .logo-holder {
-    align-items: center;
-    height: inherit;
-    display: flex;
-    margin-left: 10%;
-}
-
-.header .navbar .logo-container .logo-holder h2 {
-    color: whitesmoke;
-}
-
-.header .navbar .list-container ul li a {
-    color: whitesmoke;
-    opacity: .7;
-}
-
-.header .navbar .list-container {
-    width: 60%;
-    display: block;
-    float: left;
-    height: inherit;
-}
-
-.header .navbar .list-container .navbar-list {
-    height: inherit;
-    display: flex;
-    float: right;
-    margin-right: 10%;
-    align-items: center;
-}
-
-.header .navbar .list-container ul {
-    list-style: none;
-    padding: 10px 0;
-}
-
-.header .navbar .list-container ul li a {
-    padding: 20px;
-    font-size: 18px;
-    text-decoration: none;
-    text-transform: capitalize;
-}
-
-.header .navbar .list-container ul li a:hover {
+.header .navbar .lis t-container ul li a:hover {
     opacity: 1;
 }
 
-#check {
-    display: none;
+.navbar__a {
+    color: whitesmoke !important;
+    opacity: 0.7;
+    font-size: 1.25rem;
 }
 
-.bar-icon-label {
-    font-size: 30px;
-    color: whitesmoke;
-    padding: 15px;
-    cursor: pointer;
+.navbar__a:hover {
+    opacity: 1;
+    /* color: whitesmoke; */
 }
 
 
@@ -207,6 +161,13 @@
 * about us section 
 *
 */
+
+.about-card-holder {
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+    border-top: 4px solid #035aa6;
+    box-shadow: 2px 2px 10px rgba(68, 68, 68, 0.4);
+}
 
 .about__title {
     line-height: 2;
@@ -317,16 +278,27 @@
 * 
 */
 
-.testimonials {
+.testimonials .testimonial-title {
+    color: whitesmoke;
+    opacity: 0.7;
+}
+
+.testimonial__item {
     padding: 20px 0;
 }
 
-.testimonials:hover {
+.testimonial__item:hover {
     background-color: #88888878;
 }
 
-.testimonials:hover q {
-    opacity: 1;
+.testimonial__item>.custom__text {
+    color: whitesmoke;
+    opacity: 0.7;
+}
+
+.testimonial__item:hover .custom__text {
+    opacity: 0.8;
+    color: white;
 }
 
 .testimonial-title-holder {
@@ -341,43 +313,8 @@
     background-repeat: no-repeat;
 }
 
-.testimonial-title h2 {
-    text-align: center;
-    opacity: .8;
-    color: whitesmoke;
-}
-
-.testimonials-holder {
-    padding: 40px 0;
-}
-
-.testimonials p {
-    line-height: 1.5;
-    text-align: center;
-    opacity: .8;
-    color: whitesmoke;
-}
-
 .testimonials q {
-    opacity: .8;
-    color: whitesmoke;
     font-size: 16px;
-}
-
-.testimonials h3,
-.testimonials h5 {
-    padding-top: 0;
-    text-align: center;
-    opacity: .8;
-    color: whitesmoke;
-}
-
-.testimonials h3 {
-    padding-top: 10px;
-}
-
-.testimonials h5 {
-    padding-bottom: 15px;
 }
 
 .testimonials-image {
@@ -412,82 +349,6 @@
 * 
 */
 
-.destination-images-container {
-    padding: 60px 0;
-    display: grid;
-    grid-gap: 1.5rem;
-    grid-template-columns: repeat(auto-fill, minmax( 22rem, 1fr));
-    grid-auto-flow: row;
-}
-
-.destination-image-holder {
-    overflow: hidden;
-    box-shadow: 2px 10px 10px rgba(68, 68, 68, 0.8);
-}
-
-.background-holder {
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
-    width: 100%;
-    height: 100%;
-    z-index: 1;
-}
-
-.destination-image-holder img {
-    transition: all 0.6s ease-in-out;
-    display: block;
-    position: relative;
-    z-index: 0;
-}
-
-.destination-image-holder img:hover {
-    transform: scale(1.3);
-    z-index: -1;
-}
-
-.seventeen-percent {
-    grid-column: span 2;
-    height: 500px;
-}
-
-.destination-image-holder {
-    width: 100%;
-    /* height: 300px; */
-    position: relative;
-    display: flex;
-}
-
-.destination-image-holder:hover .hero-image-text {
-    transition: all 0.4s ease-in-out;
-    bottom: 0;
-}
-
-.hero-image-text {
-    transition: all 0.6s ease-in-out;
-    height: 80px;
-    bottom: -50%;
-    position: absolute;
-    display: block;
-    width: 100%;
-    z-index: 3;
-}
-
-.place-name-text {
-    background-color: #4444449d;
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
-    position: relative;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    height: inherit;
-    padding-left: 20px;
-}
-
-.place-name-text h3 {
-    position: absolute;
-    color: white;
-    opacity: .7;
-}
-
 
 /*
 *
@@ -506,8 +367,8 @@
     border-bottom-left-radius: 80% 100%;
 }
 
-.price-head-price,
-.price-head-title {
+.price__holder,
+.price__title {
     background-color: #035aa6;
 }
 
@@ -515,33 +376,16 @@
     color: #FFFEFD;
 }
 
-.price-head-price,
-.price-head-title {
-    text-align: center;
-}
-
-.price-head-title h2 {
-    padding: 5px;
-}
-
-.price-head-price .price {
-    display: inline-block;
+.price__font {
     font-size: 36px;
 }
 
-.price-head-price span {
+.price__span {
     font-size: 22px;
-    font-weight: bold;
 }
 
-.price-detail {
-    text-align: left;
-    margin: 30px;
-}
-
-.price-detail p {
-    padding: 5px;
-    display: inline;
+.price__detail {
+    color: rgb(136, 136, 136);
 }
 
 .sign-up {
@@ -568,6 +412,7 @@
 .custom-button:hover {
     background-color: #035aa6;
     color: white;
+    text-decoration: none;
 }
 
 
@@ -765,29 +610,6 @@ a.footer__icon:hover {
         text-align: center;
         display: block;
     }
-    .about-us .container {
-        width: 100%;
-        padding: 20px;
-    }
-    .outer-holder {
-        display: grid;
-        grid-gap: 2rem;
-        grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
-    }
-    .destination .container {
-        width: 100vw;
-    }
-    .destination-card-holder {
-        grid-template-columns: repeat(auto-fill, minmax( 15rem, 1fr));
-        border-top-left-radius: 0;
-        border-top-right-radius: 0;
-    }
-    .destination-images-container {
-        grid-template-columns: repeat(auto-fill, minmax( 15rem, 1fr));
-    }
-    .seventeen-percent {
-        grid-column: unset;
-    }
     .destination-image-holder {
         height: 300px;
     }
@@ -795,29 +617,8 @@ a.footer__icon:hover {
         border-top-left-radius: 0;
         border-top-right-radius: 0;
     }
-    .destination-cards-container {
-        padding: 60px 0;
-        display: grid;
-        grid-gap: 1.5rem;
-        grid-template-columns: repeat(auto-fill, minmax( 15rem, 1fr));
-    }
     .subscribe__title {
         font-size: 1.5rem;
-    }
-    .testimonials p {
-        padding: 10px 0;
-        line-height: 1.5;
-        text-align: center;
-        color: #888888;
-    }
-}
-
-@media only screen and (min-width:450px) and (max-width:600px) {
-    .destination-cards-container {
-        grid-template-columns: repeat(auto-fill, minmax( 20rem, 1fr));
-    }
-    .destination-images-container {
-        grid-template-columns: repeat(auto-fill, minmax( 20rem, 1fr));
     }
 }
 
@@ -828,23 +629,7 @@ a.footer__icon:hover {
 * 
 */
 
-@media only screen and (min-width: 600px) {
-    .bar-container {
-        display: flex;
-        height: inherit;
-        align-items: center;
-        justify-content: flex-end;
-        padding-right: 20px;
-    }
-    .header .navbar .list-container .navbar-list {
-        height: auto;
-        visibility: hidden;
-        width: 100%;
-        display: block;
-        position: fixed;
-        left: 0;
-        top: 80px;
-    }
+@media only screen and (min-width: 576px) {
     .responsive .navbar-ul {
         display: block;
         visibility: visible;
@@ -855,35 +640,10 @@ a.footer__icon:hover {
         background-color: #333333;
         left: 0;
     }
-    .header .navbar .list-container ul {
-        padding: 0;
-    }
-    .header .navbar .list-container ul li {
-        display: block;
-        padding: 0;
-    }
     .header .navbar .list-container ul li a:hover {
         color: white;
         text-decoration: underline;
         background-color: rgba(169, 169, 169, 0.234);
-    }
-    .header .navbar .list-container {
-        width: 0;
-    }
-    .header .navbar .list-container ul li a {
-        text-align: center;
-        display: block;
-    }
-    .outer-holder {
-        display: grid;
-        grid-gap: 2rem;
-        grid-template-columns: repeat(auto-fill, minmax(18rem, 1fr));
-    }
-    .testimonials p {
-        padding: 10px 0;
-        line-height: 1.5;
-        text-align: center;
-        color: #888888;
     }
 }
 
@@ -898,41 +658,6 @@ a.footer__icon:hover {
     .bar-container {
         display: none;
     }
-    .header .navbar .list-container {
-        display: block;
-        width: 60%;
-    }
-    .header .navbar .list-container .navbar-list {
-        height: inherit;
-        display: flex;
-        top: unset;
-        width: auto;
-        position: initial;
-        float: right;
-        margin-right: 5%;
-        align-items: center;
-        visibility: visible;
-        display: flex;
-        left: initial;
-    }
-    .responsive .navbar-ul {
-        background-color: unset;
-        box-shadow: none;
-    }
-    .header .navbar .list-container ul {
-        padding: 10px 0;
-    }
-    .header .navbar .list-container ul li {
-        display: inline;
-        padding: 20px 0;
-    }
-    .header .navbar .list-container ul li a {
-        display: initial;
-        font-size: 16px;
-    }
-    .header .navbar .list-container ul li a:hover {
-        background-color: unset
-    }
 }
 
 
@@ -943,9 +668,6 @@ a.footer__icon:hover {
 */
 
 @media only screen and (min-width: 850px) {
-    .header .navbar .list-container .navbar-list {
-        margin-right: 10%;
-    }
     .header .navbar .list-container ul li a {
         font-size: 18px;
     }
@@ -958,12 +680,7 @@ a.footer__icon:hover {
 * 
 */
 
-@media only screen and (min-width: 992px) {
-    .outer-holder {
-        margin: 0 auto;
-        grid-template-columns: repeat(auto-fill, minmax(18rem, 1fr));
-    }
-}
+@media only screen and (min-width: 992px) {}
 
 
 /*
@@ -983,8 +700,8 @@ a.footer__icon:hover {
         -moz-background-attachment: local !important;
         -o-background-attachment: local !important;
     }
-    .hero-image-text {
-        bottom: 0;
+    .img-fluid-text {
+        bottom: 50%;
     }
 }
 
@@ -996,28 +713,6 @@ a.footer__icon:hover {
 */
 
 @media only screen and (min-width: 1200px) {
-    .outer-holder {
-        margin: 0 auto;
-        width: 90%;
-        grid-template-columns: repeat(auto-fill, minmax(22rem, 1fr));
-    }
-    .destination-cards-container {
-        width: 90%;
-        margin: 0 auto;
-    }
-    .destination-images-container {
-        width: 90%;
-        margin: 0 auto;
-    }
-    .testimonials {
-        padding: 20px 0;
-        width: 32%;
-        display: inline-block;
-        margin: 5px;
-    }
-    .testimonials p {
-        padding: 15px 0;
-    }
     .subscribe .hero-image-subscribe {
         background-attachment: fixed;
     }
